# invertedIndex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs  utils.rs
src/in_memory_index/: doc_occurence.rs  document_index.rs  mod.rs  stop_words.rs
src/logging/: mod.rs
src/server/: controllers.rs  mod.rs  query_route.rs  responses.rs
static/: index.html
static/assets/: index.6d230eb6.css  index.8735545e.js
