[package]
name = "inverted_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rayon = "1.5.3"
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.17"
anyhow = "1.0.66"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12.0"
webpage = "1.4.0"
actix-files = "0.6.2"
actix-web-lab = "0.18.5"
openssl = { version = "0.10", features = ["vendored"] }